feat: modify linting ci

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,6 +1,10 @@
-name: PR Check
+name: Linting 
 on:
   pull_request:
+    branches:
+      - main
+      - staging
+  push:
     branches:
       - main
       - staging
