--- a/compose.yml
+++ b/compose.yml
@@ -1,15 +1,17 @@
 services:
-  mongo:
-    image: mongo:latest
+  postgres:
+    image: postgres:latest
     restart: unless-stopped
+    container_name: postgres
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: helloworld
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB:  ${POSTGRES_DB} 
     ports:
-      - "27017:27017"
+      - "5432:5432"
     volumes:
-      - scalar_healer_mongo_data:/data/db
-
+      - scalar_healer_data:/var/lib/postgresql/data
+ 
   openobserve:
     image: public.ecr.aws/zinclabs/openobserve:latest
     restart: unless-stopped
@@ -23,5 +25,5 @@ services:
       - scalar_healer_openobserve_data:/data
 
 volumes:
-  scalar_healer_mongo_data:
+  scalar_healer_data:
   scalar_healer_openobserve_data:
