--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -37,8 +37,12 @@ jobs:
           echo "OPENOBSERVE_ENDPOINT=http://localhost:5080" >>.env
           echo "OPENOBSERVE_CREDENTIAL=pwd12333" >>.env
 
-          echo "MONGODB_URI=mongodb://root:helloworld@localhost:27017" >>.env
-          echo "MONGODB_DATABASE=healer" >>.env
+          echo "POSTGRES_USER=postgres" >>.env
+          echo "POSTGRES_PASSWORD=postgres" >>.env
+          echo "POSTGRES_DB=scalar_healer" >>.env
+          echo "POSTGRES_HOST=localhost" >>.env
+          echo "POSTGRES_PORT=5432" >>.env
+          echo "MIGRATION_URL=file://pkg/db/sqlc/migration" >>.env
 
           echo "CLIENTS_CONFIG_PATH=data" >>.env
       - name: Setup mongodb
